vlib/v/checker/tests/incorrect_smartcast_err.vv
interface IExample{
}

struct Example{
	field string
}

fn main(){
	mut example := IExample(Example{field:"test"})
	if example is Example{
		println(example.field)
	}
}
